fixed h1 spacing

--- a/assets/themes/tom/css/screen.css
+++ b/assets/themes/tom/css/screen.css
@@ -29,11 +29,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  margin-bottom: 1em;
+  margin-bottom: 1px;
 }
 
 p {
-  margin: 1em 0;
+  margin: 0.9em 0;
 }
 
 a {
